--- a/markdown/20200407.md
+++ b/markdown/20200407.md
@@ -11,14 +11,123 @@ Author: yen
 
 <!-- PELICAN_END_SUMMARY -->
 
+<!-- css and js for Wink3 -->
+<link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css" />
+<script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"></script>
+
+cd 協同分組
+----
+2a 名單: <https://mde.tw/studlist/2022spring/2a.txt>
+2b 名單: <https://mde.tw/studlist/2022spring/2b.txt>
+[2a 分組]
+[2b 分組]
+ [Onshape 中的 uArm 組立圖]
+ [分配 NX 教學影片]
+ 
+ 以下影片說明如何利用 Leo Editor 編輯 config/pelican.leo 網誌檔案:
+ 
+ <script>
+var winkVideoData_pelican = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pelican" height="630" muted="true" width="1008">
+<source src="./../downloads/w6_blog/w6_blog.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+
+[2a 分組]: https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src.py&src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src2.py
+[2b 分組]: https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp.py&src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp_src2.py
+[Onshape 中的 uArm 組立圖]: https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be
+ [分配 NX 教學影片]: https://www.youtube.com/watch?v=GUaa97tALxE&list=PLzEsJue49U_EMMv0eBo8MNJjJOq_WHCrl
+
+以下為第三週的課程教學影片:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/roJ3Bk44qO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+如何建立可攜 NX1980 系統
+----
+
+製作 Portable NX1980 的步驟請參考以下影片:
+
+<script>
+var winkVideoData_nx1980 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_nx1980" height="630" muted="true" width="1008">
+<source src="./../downloads/w5_portable_nx1980/w5_portable_nx1980.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+
+NX1980 setup
+----
+
+以下影片說明如何設定 Journal 存檔格式, 關閉 Product Execellence Program, 並查驗版本與授權使用單位:
+
+<script>
+var winkVideoData_nx1980_setup = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_nx1980_setup" height="630" muted="true" width="1008">
+<source src="./../downloads/w5_nx_api/w5_nx_api.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+
+Three.js
+----
+
+<p><iframe frameborder="0" height="300" src="./../downloads/threejs_ex/index.html" width="300"></iframe></p>
+<p><iframe frameborder="0" height="300" src="./../downloads/threejs_ex/ex1/asm.html" width="300"></iframe></p>
+
 scarysim 專案
 ----
 
 位於 <https://github.com/mdecourse/scarysim>, 採用  Qt5 與 OpenGL 編寫, 可以使用 qmake 進行編譯與連結.
 
-<!-- css and js for Wink3 -->
-<link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css" />
-<script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"></script>
 <!-- 導入 winkVideoData 變數值 -->
 <script>
 var winkVideoData = {
